adding documentation files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,10 @@ find_package(MPI REQUIRED)
 find_package(NetCDF REQUIRED Fortran)
 
 add_subdirectory(src)
+
+# Determine whether or not to generate documentation.
+option(ENABLE_DOCS "Enable generation of doxygen-based documentation." OFF)
+if(ENABLE_DOCS)
+  find_package(Doxygen REQUIRED)
+endif()
+add_subdirectory(docs)  
