--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,5 +2,7 @@
 add_executable(test_ncio test_ncio.f90)
 
 target_link_libraries(test_ncio PRIVATE ncio::ncio NetCDF::NetCDF_Fortran)
-add_test(test_ncio test_ncio)
+add_test(NAME test_ncio  COMMAND test_ncio
+         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+)
 
