don't impose CLASSIC model (issue #6) (#16)
* Create LICENSE.md

* Update LICENSE.md

* don't impose CLASSIC model (issue #6)

* add NF90_CLOBBER back

* fix typo

* update comment

* fix typo

* change name from module_fv3gfs_ncio to module_ncio

* fix typo

* change module name, path to output file

* add template nc file for test

* make sure test finds input data

* don't ignore *.nc files

* change name of template file

* put .nc back in

* remove

* run test

* check output

* fix verbosity

* remove unused variable

* add a couple more tests

* update

* add comment to remind myself to add support for extra integer types

* fix comments

* test reading of a slice

* add missing quantize_data_5d to interface

* test writing of slice

* dump comments from source in here until we have better docs

* update some comments

* fix formatting

* fix typo

* add link to users guide (such as it is)

* update

* update docs for open_dataset, create_dataset

* update docs

Co-authored-by: Hang-Lei-NOAA <44901908+Hang-Lei-NOAA@users.noreply.github.com>
Co-authored-by: jswhit2 <Jeffrey.S.Whitaker@noaa.gov>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@
 # an NCEP library for reading and writing netCDF data files.
 #
 list(APPEND fortran_src
-  module_fv3gfs_ncio.f90
+  module_ncio.f90
 )
 
 if(APPLE)
