--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,9 @@
+# This is the CMake file for the tests directory of NCEPLIBS-ncio.
 
-add_executable(test_ncio test_ncio.f90)
+add_executable(tst_ncio tst_ncio.F90)
 
-target_link_libraries(test_ncio PRIVATE ncio::ncio NetCDF::NetCDF_Fortran)
-add_test(NAME test_ncio  COMMAND test_ncio
+target_link_libraries(tst_ncio PRIVATE ncio::ncio NetCDF::NetCDF_Fortran)
+add_test(NAME tst_ncio  COMMAND tst_ncio
          WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
