--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,9 @@
 # This is the CMake file for the tests directory of NCEPLIBS-ncio.
 
 # Copy some test files from current source dir to out-of-tree build dir.
-FILE(GLOB COPY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/dynf000_template.nc.in)
-FILE(COPY ${COPY_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+execute_process( COMMAND ${CMAKE_COMMAND} -E copy
+    ${CMAKE_CURRENT_SOURCE_DIR}/dynf000_template.nc.in
+    ${CMAKE_CURRENT_BINARY_DIR}/dynf000_template.nc.in
 
 # Build and run test.
 add_executable(tst_ncio tst_ncio.F90)
