--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,7 +3,7 @@
 # Copy some test files from current source dir to out-of-tree build dir.
 execute_process( COMMAND ${CMAKE_COMMAND} -E copy
     ${CMAKE_CURRENT_SOURCE_DIR}/dynf000_template.nc.in
-    ${CMAKE_CURRENT_BINARY_DIR}/dynf000_template.nc.in
+    ${CMAKE_CURRENT_BINARY_DIR}/dynf000_template.nc.in)
 
 # Build and run test.
 add_executable(tst_ncio tst_ncio.F90)
