--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -2,14 +2,19 @@
 #
 # Ed Hartnett 2/9/21
 
-# Create doxyfile.
-set(abs_top_srcdir "${CMAKE_SOURCE_DIR}")
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+if(ENABLE_DOCS)
 
-# Build documentation with target all.
-add_custom_target(doc ALL
-  ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-  COMMENT "Generating API Documentation with Doxygen" VERBATIM)
+  # Create doxyfile.
+  set(abs_top_srcdir "${CMAKE_SOURCE_DIR}")
+  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+
+  # Build documentation with target all.
+  add_custom_target(doc ALL
+    ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Generating API Documentation with Doxygen" VERBATIM)
+
+endif(ENABLE_DOCS)
+
 
 
