--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -16,11 +16,20 @@ jobs:
         sudo apt-get install libmpich-dev
         sudo apt-get install libnetcdf-dev libnetcdff-dev netcdf-bin pkg-config
         sudo apt-get install doxygen
-       
+        python3 -m pip install gcovr
+          
     - name: build and test
       run: |
         pwd && ls -l
         mkdir build && cd build
-        cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH=~
+        cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH=~ -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -O0"
         make -j2
         ctest --verbose
+        export PATH="/home/runner/.local/bin:$PATH"
+        gcovr -r .. --html-details -o test-coverage.html
+
+    - uses: actions/upload-artifact@v2
+      if: ${{ matrix.os == 'ubuntu-20.04' }}
+      with:
+        name: test-coverage
+        path: ufs_utils/build/*.html
