--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,8 +24,9 @@ jobs:
         mkdir build && cd build
         cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH=~ -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -O0"
         make -j2
-        ctest --verbose
+        make VERBOSE=1 test
         export PATH="/home/runner/.local/bin:$PATH"
+        ls -l
         gcovr -s $HOME/work/NCEPLIBS-ncio/NCEPLIBS-ncio/src -r .. --html-details -o test-coverage.html
 
     - uses: actions/upload-artifact@v2
