--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       FC: gfortran-9
       CC: gcc-9
@@ -29,10 +29,11 @@ jobs:
         export PATH="/home/runner/.local/bin:$PATH"
         ls -l
         gcovr -s $HOME/work/NCEPLIBS-ncio/NCEPLIBS-ncio/src -r .. --html-details -o test-coverage.html
+        pwd
         ls -l
 
     - uses: actions/upload-artifact@v2
-      if: ${{ matrix.os == 'ubuntu-20.04' }}
+      if: ${{ matrix.os == 'ubuntu-latest' }}
       with:
         name: test-coverage
-        path: ufs_utils/build/*.html
+        path: NCEPLIBS-ncio/build/*.html
