--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       FC: gfortran-9
       CC: gcc-9
@@ -28,12 +28,13 @@ jobs:
         make VERBOSE=1 test
         export PATH="/home/runner/.local/bin:$PATH"
         ls -l
+        gcovr --version
         gcovr -s $HOME/work/NCEPLIBS-ncio/NCEPLIBS-ncio/src -r .. --html-details -o test-coverage.html
         pwd
         ls -l
 
     - uses: actions/upload-artifact@v2
-      if: ${{ matrix.os == 'ubuntu-latest' }}
+      if: ${{ matrix.os == 'ubuntu-20.04' }}
       with:
         name: test-coverage
         path: NCEPLIBS-ncio/build/*.html
