--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -36,4 +36,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: test-coverage
-        path: NCEPLIBS-ncio/build/*.html
+        path: $HOME/work/NCEPLIBS-ncio/NCEPLIBS-ncio/build/*.html
