trying to fix gcovr run

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -36,4 +36,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: test-coverage
-        path: /home/runner/work/NCEPLIBS-ncio/NCEPLIBS-ncio/build/test-coverage.html
+        path: /home/runner/work/NCEPLIBS-ncio/NCEPLIBS-ncio/build/*.html
