--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -15,6 +15,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install libmpich-dev
         sudo apt-get install libnetcdf-dev libnetcdff-dev netcdf-bin pkg-config
+        apt list -a doxygen
         sudo apt-get install doxygen
        
     - name: build and test
