--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       FC: gfortran-9
       CC: gcc-9
@@ -15,7 +15,6 @@ jobs:
         sudo apt-get update
         sudo apt-get install libmpich-dev
         sudo apt-get install libnetcdf-dev libnetcdff-dev netcdf-bin pkg-config
-        apt list -a doxygen
         sudo apt-get install doxygen
        
     - name: build and test
