--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -39,6 +39,8 @@ jobs:
         pwd && ls -l
         mpicc --version
         mpifort --version
+        export FC=mpifort
+        export CC=mpicc
         mkdir build && cd build
         cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH=~
         make -j2
