--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -9,14 +9,14 @@ jobs:
       CC: gcc-9
     strategy:
       matrix:
-        os: [macos-10.15, ubuntu-20.04]
+        os: [macos-10.15, ubuntu-latest]
         compiler: [gcc-9]      
 
     steps:
     - uses: actions/checkout@v2
     - name: install-dependencies
       run: |
-        if [[ ${{ matrix.os }} == "ubuntu-20.04" ]]; then
+        if [[ ${{ matrix.os }} == "ubuntu-latest" ]]; then
           sudo apt-get update
           sudo apt-get install libmpich-dev
           sudo apt-get install libnetcdf-dev libnetcdff-dev netcdf-bin pkg-config
