--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,8 @@
 # This is the CMake file for the tests directory of NCEPLIBS-ncio.
 
+# Brian Curtis: Add MPI capability to testing
+include (LibMPI)
+
 # Copy some test files from current source dir to out-of-tree build dir.
 execute_process( COMMAND ${CMAKE_COMMAND} -E copy
     ${CMAKE_CURRENT_SOURCE_DIR}/dynf000_template.nc.in
@@ -10,4 +13,8 @@ add_executable(tst_ncio tst_ncio.F90)
 target_link_libraries(tst_ncio PRIVATE ncio::ncio NetCDF::NetCDF_Fortran)
 add_test(NAME tst_ncio  COMMAND tst_ncio)
 
-
+# Brian Curtis: MPI Test
+add_mpi_test(tst_ncio_mpi
+  EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/tst_ncio_mpi
+  NUMPROCS 4
+  TIMEOUT 60)
