--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,12 +10,12 @@ execute_process( COMMAND ${CMAKE_COMMAND} -E copy
 
 # Build and run test.
 add_executable(tst_ncio tst_ncio.F90)
-target_link_libraries(tst_ncio PRIVATE ncio::ncio NetCDF::NetCDF_Fortran)
+target_link_libraries(tst_ncio PRIVATE ncio::ncio)
 add_test(NAME tst_ncio  COMMAND tst_ncio)
 
 # Brian Curtis: MPI Test
 add_executable(tst_ncio_mpi tst_ncio_mpi.F90)
-target_link_libraries(tst_ncio_mpi PUBLIC ncio::ncio NetCDF::NetCDF_Fortran MPI::MPI_Fortran)
+target_link_libraries(tst_ncio_mpi PRIVATE ncio::ncio)
 add_mpi_test(tst_ncio_mpi
   EXECUTABLE ${CMAKE_CURRENT_BINARY_DIR}/tst_ncio_mpi
   NUMPROCS 4
