--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -47,7 +47,7 @@ jobs:
         cmake .. -DENABLE_DOCS=Yes -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -O0"
         make -j2
         ctest --verbose
-        gcovr -r .. --html-details -o test-coverage.html
+        gcovr -r ..-v  --html-details -o test-coverage.html
 
     - name: upload-test-coverage
       if: startsWith(matrix.os,'ubuntu')
