--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,45 @@
 # This is the CMake file for the tests directory of NCEPLIBS-ncio.
 
+# Syntax:  add_mpi_test (<TESTNAME>
+#                        EXECUTABLE <command>
+#                        ARGUMENTS <arg1> <arg2> ...
+#                        NUMPROCS <num_procs>
+#                        TIMEOUT <timeout>)
+function (add_mpi_test TESTNAME)
+
+  # Parse the input arguments
+  set (options)
+  set (oneValueArgs NUMPROCS TIMEOUT EXECUTABLE)
+  set (multiValueArgs ARGUMENTS)
+  cmake_parse_arguments (${TESTNAME} "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN})
+
+  # Store parsed arguments for convenience
+  set (exec_file ${${TESTNAME}_EXECUTABLE})
+  set (exec_args ${${TESTNAME}_ARGUMENTS})
+  set (num_procs ${${TESTNAME}_NUMPROCS})
+  set (timeout ${${TESTNAME}_TIMEOUT})
+
+  if(MPIEXEC_EXECUTABLE)
+    set( MPIEXEC ${MPIEXEC_EXECUTABLE} )
+  endif()
+  if(NOT MPIEXEC)
+    find_program( MPIEXEC NAMES mpiexec mpirun lamexec srun
+                  DOC "Executable for running MPI programs." )
+  endif()
+
+  # Run tests directly from the command line
+  set(EXE_CMD ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${num_procs}
+      ${MPIEXEC_PREFLAGS}  ${exec_file}
+      ${MPIEXEC_POSTFLAGS} ${exec_args})
+
+  # Add the test to CTest
+  add_test(NAME ${TESTNAME} COMMAND ${EXE_CMD})
+
+  # Adjust the test timeout
+  set_tests_properties(${TESTNAME} PROPERTIES TIMEOUT ${timeout})
+
+endfunction()
+
 # Copy some test files from current source dir to out-of-tree build dir.
 execute_process( COMMAND ${CMAKE_COMMAND} -E copy
     ${CMAKE_CURRENT_SOURCE_DIR}/dynf000_template.nc.in
@@ -7,7 +47,7 @@ execute_process( COMMAND ${CMAKE_COMMAND} -E copy
 
 # Build and run test.
 add_executable(tst_ncio tst_ncio.F90)
-target_link_libraries(tst_ncio PRIVATE ncio::ncio NetCDF::NetCDF_Fortran)
+target_link_libraries(tst_ncio PRIVATE ncio::ncio)
 add_test(NAME tst_ncio  COMMAND tst_ncio)
 
 
