removed --verbose option from ctest in the CI run

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -88,7 +88,7 @@ jobs:
         mkdir build && cd build
         cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0"
         make -j2
-        ctest --verbose --output-on-failure
+        ctest --output-on-failure
         gcovr -v --html-details -o test-coverage.html
     
     - uses: actions/upload-artifact@v2
