--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-10.15, ubuntu-latest]
-        netcdf_version: [4.7.4]
+        netcdf_version: [4.8.1]
         compiler: [gcc-9]      
 
     steps:
@@ -59,7 +59,9 @@ jobs:
         export CC=mpicc
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
-        wget https://www.unidata.ucar.edu/downloads/netcdf/ftp/netcdf-c-${{ matrix.netcdf_version }}.tar.gz &> /dev/null
+https://downloads.unidata.ucar.edu/netcdf-c/4.8.1/netcdf-c-4.8.1.tar.g
+        wget https://downloads.unidata.ucar.edu/netcdf-c/${{ matrix.netcdf_version }}/netcdf-c-${{ matrix.netcdf_version }}.tar.gz &> /dev/null
+
         tar -xzf netcdf-c-${{ matrix.netcdf_version }}.tar.gz
         cd netcdf-c-${{ matrix.netcdf_version }}
         ./configure --prefix=${HOME}/netcdf --disable-dap --disable-utilities
