--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,7 +10,8 @@ jobs:
     strategy:
       matrix:
         os: [macos-10.15, ubuntu-latest]
-        netcdf_version: [4.8.1]
+        netcdf_version: [4.7.4]
+        hdf5_version: [1.12.1]
         compiler: [gcc-9]      
 
     steps:
@@ -46,9 +47,12 @@ jobs:
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
       run: |
         export CC=mpicc
-        wget https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.10/hdf5-1.10.7/src/hdf5-1.10.7.tar.gz &> /dev/null
-        tar -xzf hdf5-1.10.7.tar.gz
-        pushd hdf5-1.10.7
+        hdf5_url=https://support.hdfgroup.org/ftp/HDF5/releases
+        shortvers=$(echo ${{ matrix.hdf5_version }} | awk -F "." '{printf "%d.%d", $1, $2}')
+        download_url=$hdf5_url/hdf5-$shortvers/hdf5-${{ matrix.hdf5_version }}/src/hdf5-${{ matrix.hdf5_version }}.tar.gz
+        wget $download_url &> /dev/null
+        tar -xzf hdf5-${{ matrix.hdf5_version }}.tar.gz
+        pushd hdf5-${{ matrix.hdf5_version }}
         ./configure --prefix=${HOME}/netcdf --enable-parallel --disable-tools --disable-fortran --disable-cxx --enable-parallel-tests
         make -j2
         make install
