--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         os: [macos-10.15, ubuntu-latest]
         netcdf_version: [4.8.1]
+        netcdff_version: [4.5.4]
         hdf5_version: [1.12.1]
         compiler: [gcc-9]      
 
@@ -79,9 +80,9 @@ jobs:
         export FC=mpifort
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
-        wget https://github.com/Unidata/netcdf-fortran/archive/v4.5.3.tar.gz &> /dev/null
-        tar -xzf v4.5.3.tar.gz
-        pushd netcdf-fortran-4.5.3
+        wget https://github.com/Unidata/netcdf-fortran/archive/v${{ matrtix.netcdff_version }}.tar.gz &> /dev/null
+        tar -xzf v${{ matrtix.netcdff_version }}.tar.gz
+        pushd netcdf-${{ matrtix.netcdff_version }}
         ./configure --prefix=${HOME}/netcdf
         make -j2
         make install   
