fix netcdf-fortran build, add slicing to 5d var

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -82,7 +82,7 @@ jobs:
         export LDFLAGS=-L${HOME}/netcdf/lib
         wget https://github.com/Unidata/netcdf-fortran/archive/v${{ matrix.netcdff_version }}.tar.gz &> /dev/null
         tar -xzf v${{ matrix.netcdff_version }}.tar.gz
-        pushd netcdf-${{ matrix.netcdff_version }}
+        pushd netcdf-fortran-${{ matrix.netcdff_version }}
         ./configure --prefix=${HOME}/netcdf
         make -j2
         make install   
