--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -9,7 +9,7 @@ jobs:
       CC: gcc-9
     strategy:
       matrix:
-        os: [macos-10.15, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest]
         netcdf_version: [4.8.1]
         netcdff_version: [4.5.4]
         hdf5_version: [1.12.1]
@@ -25,10 +25,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install libmpich-dev
           sudo apt-get install doxygen
-        elif [[ ${{ matrix.os }} == "macos-10.15" ]]; then
+        elif [[ ${{ matrix.os }} == "macos-latest" ]]; then
           brew update
           brew install doxygen
           brew install mpich
+          brew install libzip
           if [[ ${{ matrix.compiler }} == "gcc-9" ]]; then
             sudo ln -sf /usr/local/bin/gfortran-9 /usr/local/bin/gfortran
           elif  [[ ${{ matrix.compiler }} == "gcc-10" ]]; then
