--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -9,10 +9,8 @@ jobs:
       CC: gcc-9
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
-        netcdf_version: [4.8.1]
-        netcdff_version: [4.5.4]
-        hdf5_version: [1.12.1]
+        os: [macos-10.15, ubuntu-latest]
+        netcdf_version: [4.7.4]
         compiler: [gcc-9]      
 
     steps:
@@ -25,7 +23,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install libmpich-dev
           sudo apt-get install doxygen
-        elif [[ ${{ matrix.os }} == "macos-latest" ]]; then
+        elif [[ ${{ matrix.os }} == "macos-10.15" ]]; then
           brew update
           brew install doxygen
           brew install mpich
@@ -42,18 +40,15 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/netcdf
-        key: netcdf-c-${{ matrix.netcdf_version }}-${{ runner.os }}
+        key: netcdf-c-${{ matrix.netcdf_version }}-${{ runner.os }}1
 
     - name: build-hdf5
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
       run: |
         export CC=mpicc
-        hdf5_url=https://support.hdfgroup.org/ftp/HDF5/releases
-        shortvers=$(echo ${{ matrix.hdf5_version }} | awk -F "." '{printf "%d.%d", $1, $2}')
-        download_url=$hdf5_url/hdf5-$shortvers/hdf5-${{ matrix.hdf5_version }}/src/hdf5-${{ matrix.hdf5_version }}.tar.gz
-        wget $download_url &> /dev/null
-        tar -xzf hdf5-${{ matrix.hdf5_version }}.tar.gz
-        pushd hdf5-${{ matrix.hdf5_version }}
+        wget https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.10/hdf5-1.10.7/src/hdf5-1.10.7.tar.gz &> /dev/null
+        tar -xzf hdf5-1.10.7.tar.gz
+        pushd hdf5-1.10.7
         ./configure --prefix=${HOME}/netcdf --enable-parallel --disable-tools --disable-fortran --disable-cxx --enable-parallel-tests
         make -j2
         make install
@@ -64,9 +59,8 @@ jobs:
         export CC=mpicc
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
-        wget https://downloads.unidata.ucar.edu/netcdf-c/${{ matrix.netcdf_version }}/netcdf-c-${{ matrix.netcdf_version }}.tar.gz &> /dev/null
-
-        tar -xzf netcdf-c-${{ matrix.netcdf_version }}.tar.gz
+        wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v${{ matrix.netcdf_version }}.tar.gz
+        tar -xzf v${{ matrix.netcdf_version }}.tar.gz
         cd netcdf-c-${{ matrix.netcdf_version }}
         ./configure --prefix=${HOME}/netcdf --disable-dap --disable-utilities
         make -j2
@@ -80,9 +74,9 @@ jobs:
         export FC=mpifort
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
-        wget https://github.com/Unidata/netcdf-fortran/archive/v${{ matrix.netcdff_version }}.tar.gz &> /dev/null
-        tar -xzf v${{ matrix.netcdff_version }}.tar.gz
-        pushd netcdf-fortran-${{ matrix.netcdff_version }}
+        wget https://github.com/Unidata/netcdf-fortran/archive/v4.5.3.tar.gz &> /dev/null
+        tar -xzf v4.5.3.tar.gz
+        pushd netcdf-fortran-4.5.3
         ./configure --prefix=${HOME}/netcdf
         make -j2
         make install   
