--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -1,17 +1,15 @@
-name: Build and Test
+name: Linux
 on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ununtu-latest
     env:
-      FC: gfortran-9
-      CC: gcc-9
+      FC: gfortran-10
+      CC: gcc-10
     strategy:
       matrix:
-        os: [macos-10.15, ubuntu-latest]
-        netcdf_version: [4.7.4]
-        compiler: [gcc-9]      
+        netcdf-c-version: [4.7.4]
 
     steps:
 
@@ -19,28 +17,15 @@ jobs:
 
     - name: install-dependencies
       run: |
-        if [[ ${{ matrix.os }} == "ubuntu-latest" ]]; then
-          sudo apt-get update
-          sudo apt-get install libmpich-dev
-          sudo apt-get install doxygen
-        elif [[ ${{ matrix.os }} == "macos-10.15" ]]; then
-          brew update
-          brew install doxygen
-          brew install mpich
-          if [[ ${{ matrix.compiler }} == "gcc-9" ]]; then
-            sudo ln -sf /usr/local/bin/gfortran-9 /usr/local/bin/gfortran
-          elif  [[ ${{ matrix.compiler }} == "gcc-10" ]]; then
-            sudo ln -sf /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
-          fi
-        fi
-        python3 -m pip install gcovr
+        sudo apt-get update
+        sudo apt-get install libmpich-dev
 
     - name: cache-netcdf
       id: cache-netcdf
       uses: actions/cache@v2
       with:
         path: ~/netcdf
-        key: netcdf-c-${{ matrix.netcdf_version }}-${{ runner.os }}1
+        key: Linux-netcdf-c-${{ matrix.netcdf-c-version }}-${{ runner.os }}1
 
     - name: build-hdf5
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
@@ -50,7 +35,7 @@ jobs:
         tar -xzf hdf5-1.10.7.tar.gz
         pushd hdf5-1.10.7
         ./configure --prefix=${HOME}/netcdf --enable-parallel --disable-tools --disable-fortran --disable-cxx --enable-parallel-tests
-        make -j2
+        make -j2 VERBOSE=1
         make install
            
     - name: build-netcdf-c
@@ -59,11 +44,11 @@ jobs:
         export CC=mpicc
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
-        wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v${{ matrix.netcdf_version }}.tar.gz
-        tar -xzf v${{ matrix.netcdf_version }}.tar.gz
-        cd netcdf-c-${{ matrix.netcdf_version }}
+        wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v${{ matrix.netcdf-c-version }}.tar.gz
+        tar -xzf v${{ matrix.netcdf-c-version }}.tar.gz
+        cd netcdf-c-${{ matrix.netcdf-c-version }}
         ./configure --prefix=${HOME}/netcdf --disable-dap --disable-utilities
-        make -j2
+        make -j2 VERBOSE=1
         make install
 
     - name: build-netcdf-fortran
@@ -78,7 +63,7 @@ jobs:
         tar -xzf v4.5.3.tar.gz
         pushd netcdf-fortran-4.5.3
         ./configure --prefix=${HOME}/netcdf
-        make -j2
+        make -j2 VERBOSE=1
         make install   
        
     - name: build and test
@@ -86,12 +71,7 @@ jobs:
         export FC=mpifort
         export CC=mpicc
         mkdir build && cd build
-        cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0"
+        cmake -DCMAKE_PREFIX_PATH='~;~/netcdf' ..
         make -j2
-        ctest --output-on-failure
-        gcovr -v --html-details -o test-coverage.html
-    
-    - uses: actions/upload-artifact@v2
-      with:
-        name: test-coverage
-        path: NCEPLIBS-ncio/build/*.html
+        ctest --verbose --output-on-failure --rerun-failed
+
