--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -13,13 +13,10 @@ on:
 
 jobs:
   Linux:
-    runs-on: ununtu-latest
+    runs-on: macos-latest
     env:
       FC: gfortran-10
       CC: gcc-10
-    strategy:
-      matrix:
-        netcdf-c-version: [4.7.4]
 
     steps:
 
@@ -27,15 +24,17 @@ jobs:
 
     - name: install-dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install libmpich-dev
+        brew update
+        brew install doxygen
+        brew install mpich
+        sudo ln -sf /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
 
     - name: cache-netcdf
       id: cache-netcdf
       uses: actions/cache@v2
       with:
         path: ~/netcdf
-        key: Linux-netcdf-c-${{ matrix.netcdf-c-version }}-${{ runner.os }}1
+        key: MacOS-netcdf-c-4.7.4-${{ runner.os }}1
 
     - name: build-hdf5
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
@@ -54,9 +53,9 @@ jobs:
         export CC=mpicc
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
-        wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v${{ matrix.netcdf-c-version }}.tar.gz
-        tar -xzf v${{ matrix.netcdf-c-version }}.tar.gz
-        cd netcdf-c-${{ matrix.netcdf-c-version }}
+        wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v4.7.4.tar.gz
+        tar -xzf v4.7.4.tar.gz
+        cd netcdf-c-4.7.4
         ./configure --prefix=${HOME}/netcdf --disable-dap --disable-utilities
         make -j2 VERBOSE=1
         make install
@@ -82,6 +81,6 @@ jobs:
         export CC=mpicc
         mkdir build && cd build
         cmake -DCMAKE_PREFIX_PATH='~;~/netcdf' ..
-        make -j2
+        make -j2 VERBOSE=1
         ctest --verbose --output-on-failure --rerun-failed
 
