--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -1,4 +1,4 @@
-name: Linux
+name: MacOS
 on:
   push:
     branches:
@@ -12,7 +12,7 @@ on:
     - README.md
 
 jobs:
-  Linux:
+  MacOS:
     runs-on: macos-latest
     env:
       FC: gfortran-10
