--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -17,6 +17,10 @@ jobs:
     env:
       FC: gfortran-9
       CC: gcc-9
+    strategy:
+      matrix:
+        netcdf_version: [4.7.4]
+        compiler: [gcc-9]      
 
     steps:
 
@@ -24,9 +28,20 @@ jobs:
 
     - name: install-dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install libmpich-dev
-        sudo apt-get install doxygen
+        if [[ ${{ matrix.os }} == "ubuntu-latest" ]]; then
+          sudo apt-get update
+          sudo apt-get install libmpich-dev
+          sudo apt-get install doxygen
+        elif [[ ${{ matrix.os }} == "macos-10.15" ]]; then
+          brew update
+          brew install doxygen
+          brew install mpich
+          if [[ ${{ matrix.compiler }} == "gcc-9" ]]; then
+            sudo ln -sf /usr/local/bin/gfortran-9 /usr/local/bin/gfortran
+          elif  [[ ${{ matrix.compiler }} == "gcc-10" ]]; then
+            sudo ln -sf /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
+          fi
+        fi
         python3 -m pip install gcovr
 
     - name: cache-netcdf
@@ -34,7 +49,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/netcdf
-        key: developer-netcdf-c-4.7.4-${{ runner.os }}1
+        key: netcdf-c-${{ matrix.netcdf_version }}-${{ runner.os }}1
 
     - name: build-hdf5
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
@@ -53,9 +68,9 @@ jobs:
         export CC=mpicc
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
-        wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v4.7.4.tar.gz
-        tar -xzf v4.7.4.tar.gz
-        cd netcdf-c-4.7.4
+        wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v${{ matrix.netcdf_version }}.tar.gz
+        tar -xzf v${{ matrix.netcdf_version }}.tar.gz
+        cd netcdf-c-${{ matrix.netcdf_version }}
         ./configure --prefix=${HOME}/netcdf --disable-dap --disable-utilities
         make -j2
         make install
@@ -80,14 +95,12 @@ jobs:
         export FC=mpifort
         export CC=mpicc
         mkdir build && cd build
-        cmake -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0" -DCMAKE_BUILD_TYPE=Debug ..
-        make -j2 VERBOSE=1
-        ctest --verbose --output-on-failure --rerun-failed
-        gcovr --root .. -v  --html-details --exclude ../tests --exclude CMakeFiles --print-summary -o test-coverage.html
+        cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0"
+        make -j2
+        ctest --output-on-failure
+        gcovr -v --html-details -o test-coverage.html
     
     - uses: actions/upload-artifact@v2
       with:
         name: test-coverage
-        path: |
-          NCEPLIBS-ncio/build/*.html
-          NCEPLIBS-ncio/build/*.css
+        path: NCEPLIBS-ncio/build/*.html
