--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -1,5 +1,15 @@
 name: Build and Test
-on: [push, pull_request]
+on:
+  push:
+    branches:
+    - develop
+    paths-ignore:
+    - README.md
+  pull_request:
+    branches:
+    - develop
+    paths-ignore:
+    - README.md
 
 jobs:
   build:
@@ -9,7 +19,7 @@ jobs:
       CC: gcc-9
     strategy:
       matrix:
-        os: [macos-10.15, ubuntu-latest]
+        os: [macos-latest]
         netcdf_version: [4.7.4]
         compiler: [gcc-9]      
 
