--- a/.github/workflows/Linux1.yml
+++ b/.github/workflows/Linux1.yml
@@ -1,4 +1,4 @@
-name: developer
+name: Linux1
 on:
   push:
     branches:
@@ -12,7 +12,7 @@ on:
     - README.md
 
 jobs:
-  developer:
+  Linux1:
     runs-on: ubuntu-latest
     env:
       FC: gfortran-9
@@ -80,8 +80,8 @@ jobs:
         export FC=mpifort
         export CC=mpicc
         mkdir build && cd build
-        cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0 -fsantize=address"
-        make -j2 VERBOSE=1
+        cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0"
+        make -j2
         ctest --output-on-failure
         gcovr -v --html-details -o test-coverage.html
     
