--- a/.github/workflows/Intel.yml
+++ b/.github/workflows/Intel.yml
@@ -21,8 +21,8 @@ jobs:
   Intel:
     runs-on: ubuntu-latest
     env:
-      CC: icc
-      CXX: icpc
+      CC: mpicc
+      FC: mpifort
 
     steps:
 
@@ -63,7 +63,6 @@ jobs:
     - name: build-netcdf-c
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
       run: |
-        export CC=mpicc
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
         wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v4.7.4.tar.gz
@@ -77,8 +76,6 @@ jobs:
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
       run: |
         export PATH="${HOME}/netcdf/bin:$PATH"
-        export CC=mpicc
-        export FC=mpifort
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
         wget https://github.com/Unidata/netcdf-fortran/archive/v4.5.3.tar.gz &> /dev/null
@@ -90,8 +87,6 @@ jobs:
        
     - name: build and test
       run: |
-        export FC=mpifort
-        export CC=mpicc
         mkdir build && cd build
         cmake -DCMAKE_PREFIX_PATH='~;~/netcdf' ..
         make -j2 VERBOSE=1
