--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -15,8 +15,8 @@ jobs:
   MacOS:
     runs-on: macos-latest
     env:
-      FC: gfortran-11
-      CC: gcc-11
+      FC: mpifort
+      CC: mpicc
 
     steps:
 
@@ -38,7 +38,6 @@ jobs:
     - name: build-hdf5
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
       run: |
-        export CC=mpicc
         wget https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.10/hdf5-1.10.7/src/hdf5-1.10.7.tar.gz &> /dev/null
         tar -xzf hdf5-1.10.7.tar.gz
         pushd hdf5-1.10.7
@@ -49,7 +48,6 @@ jobs:
     - name: build-netcdf-c
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
       run: |
-        export CC=mpicc
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
         wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v4.7.4.tar.gz
@@ -63,8 +61,6 @@ jobs:
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
       run: |
         export PATH="${HOME}/netcdf/bin:$PATH"
-        export CC=mpicc
-        export FC=mpifort
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
         wget https://github.com/Unidata/netcdf-fortran/archive/v4.5.3.tar.gz &> /dev/null
@@ -76,11 +72,9 @@ jobs:
        
     - name: build and test
       run: |
-        export FC=mpifort
-        export CC=mpicc
         mkdir build && cd build
         cmake .. -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0"
-        make -j2
+        make -j2 VERBOSE=1
         ctest --output-on-failure
     
 
